--- a/bims/static/css/dashboard_buttons.css
+++ b/bims/static/css/dashboard_buttons.css
@@ -2,7 +2,7 @@
     float: right;
     margin-top: -40px;
     font-size: 20pt;
-    background-color: #18A090;
+    background-color: var(--main-accent-color);
     padding-left: 10px;
     padding-right: 10px;
     color: #ffffff;
@@ -10,6 +10,6 @@
 
 .dashboard-close:hover {
     cursor: pointer;
-    color: #18A090;
+    color: var(--main-accent-color);
     background-color: #ffffff;
 }
