--- a/bims/templates/abiotic/abiotic_form.html
+++ b/bims/templates/abiotic/abiotic_form.html
@@ -33,7 +33,7 @@
             float: right;
             margin-top: -45px;
             font-size: 20pt;
-            background-color: #18A090;
+            background-color: var(--main-accent-color);
             padding-left: 10px;
             padding-right: 10px;
             color: #ffffff;
@@ -41,7 +41,7 @@
 
         .dashboard-close:hover {
             cursor: pointer;
-            color: #18A090;
+            color: var(--main-accent-color);
             background-color: #ffffff;
         }
 
