--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -73,10 +73,16 @@
 {#    </div>#}
 {#</nav>#}
 
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md fixed-top">
     <div class="container">
         {% current_domain as domain_name %}
-        <a class="navbar-brand bims-title-big" href="{{ domain_name }}/">BIMS</a>
+        <a class="navbar-brand bims-title-big" href="{{ domain_name }}/">
+            {% if custom_theme.logo %}
+                <img src="{{ custom_theme.logo.url }}" height="35"/>
+            {% else %}
+                BIMS
+            {% endif %}
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarCollapse" aria-controls="navbarCollapse"
                 aria-expanded="false" aria-label="Toggle navigation">
