--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -76,7 +76,7 @@
 <nav class="navbar navbar-expand-md fixed-top">
     <div class="container">
         {% current_domain as domain_name %}
-        <a class="navbar-brand bims-title-big" href="{{ domain_name }}/">
+        <a class="navbar-brand bims-title-big" href="{{ domain_name }}/" style="padding-top: 0 !important; padding-bottom: 0 !important;">
             {% if custom_theme.logo %}
                 <img src="{{ custom_theme.logo.url }}" height="35"/>
             {% else %}
