--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -18,6 +18,7 @@
     <link href="{% static "js/libs/noUiSlider.11.1.0/nouislider.css" %}" rel="stylesheet">
     <link href="{% static "js/libs/jquery-ui-1.12.1/jquery-ui.min.css" %}" rel="stylesheet">
     <link href="{% static "js/libs/chosen/chosen.min.css" %}" rel="stylesheet">
+    <link href="{% static "js/libs/gridstack-1.1.2/gridstack.min.css" %}" rel="stylesheet">
     <link href="{% static "css/bug_report_panel_style.css" %}" rel="stylesheet">
 
     <script type="text/javascript">
