--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -735,5 +735,10 @@
                 </div>
             </div>
         </div>
+
+        <div class="container" style="text-align: center; margin-top: 20px;">
+            <button class="btn btn-info btn-html-img"><i class="fa fa-floppy-o" aria-hidden="true"></i> Export Dashboard to Image</button>
+        </div>
     </div>
+
 </script>
