--- a/bims/static/css/landing_page.css
+++ b/bims/static/css/landing_page.css
@@ -76,7 +76,7 @@ header.masthead {
     -o-background-size: cover;
     background-size: cover;
     background-color: black;
-    max-height: 400px !important;
+    max-height: 600px !important;
     min-height: auto !important;
 }
 
@@ -87,7 +87,7 @@ header.masthead {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-attachment: scroll;
-    height: 400px;
+    height: 100%;
 }
 
 header.masthead hr {
@@ -115,15 +115,39 @@ header.masthead p {
     }
 }
 
+@media (min-width: 400px) {
+    header.masthead {
+        height: 300px !important;
+    }
+    .carousel-title {
+        padding-left: 40px !important;
+    }
+    .carousel-title h2 {
+        font-size: 1em;
+    }
+    .carousel-title h5 {
+        font-size: 0.7em;
+    }
+}
+
 
 @media (min-width: 992px) {
     header.masthead {
-        min-height: 650px;
+        min-height: 500px !important;
         padding-top: 0;
         padding-bottom: 0;
     }
     header.masthead h1 {
         font-size: 3rem;
+    }
+    .carousel-title {
+        padding-left: 100px !important;
+    }
+    .carousel-title h2 {
+        font-size: 2em;
+    }
+    .carousel-title h5 {
+        font-size: 1em;
     }
 }
 
@@ -136,7 +160,7 @@ header.masthead p {
 #title-header {
     position: absolute;
     width: 100%;
-    height: 400px;
+    height: 600px;
     top: 0;
 }
 
@@ -403,16 +427,15 @@ html, body {
 
 .carousel-title {
     height: 100%;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 200px;
+    padding-right: 200px;
     font-size: 30px;
     width: 100%;
+    text-align: left;
     position: absolute;
-    text-align: center;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.5)
 }
 
 .carousel-inner, .carousel-item {
@@ -450,4 +473,12 @@ html, body {
 
 .btn-explore-map {
     font-size: 20px;
+}
+.carousel-overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: #ffffff;
+    top: 0;
+    opacity: 0;
 }
