Add partners section

--- a/bims/templates/footer.html
+++ b/bims/templates/footer.html
@@ -16,6 +16,7 @@
         text-align: center;
     }
     .footer-hr {
+        margin-top: 0;
         max-width: none !important;
         border-width: 1px !important;
     }
