--- a/bims/static/css/landing_page.css
+++ b/bims/static/css/landing_page.css
@@ -482,3 +482,26 @@ html, body {
     top: 0;
     opacity: 0;
 }
+
+.partner-container {
+    margin-top: 40px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.flex-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+.flex-item {
+    margin: auto;
+}
+.flex-item img {
+    max-height: 200px !important;
+    max-width: 400px !important;
+    margin-bottom: 20px;
+}
